fixed overlapping css styling and add filler pics

--- a/public/style.css
+++ b/public/style.css
@@ -2,3 +2,31 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+#service1,
+#service2,
+#service3,
+#service4,
+#service5 {
+  margin: 20px;
+}
+
+#service1 {
+  margin-left: 30px;
+}
+
+#service2 {
+  padding-left: 400px;
+}
+
+#service3 {
+  padding-left: 260px;
+}
+
+#service4 {
+  padding-left: 250px;
+}
+
+#service5 {
+  padding-left: 600px;
+}
